Update pom.xml
Fixing problems